--- a/Clase3/index.html
+++ b/Clase3/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script>ref=""</script>
+    <script>ref="CalculadoraPositiva.js"</script>
 </body>
 </html>
